@@ -1,123 +1,155 @@
 package com.groom.e_commerce.cart.application;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.math.BigDecimal;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import com.groom.e_commerce.cart.domain.entity.Cart;
-import com.groom.e_commerce.cart.domain.entity.CartItem;
-import com.groom.e_commerce.cart.domain.repository.CartItemRepository;
+import com.groom.e_commerce.cart.application.dto.ProductCartInfo;
+import com.groom.e_commerce.cart.application.dto.StockManagement;
+import com.groom.e_commerce.cart.domain.dto.CartItem;
+import com.groom.e_commerce.cart.domain.model.CartItemKey;
 import com.groom.e_commerce.cart.domain.repository.CartRepository;
+import com.groom.e_commerce.cart.infrastructure.feign.ProductClient;
 import com.groom.e_commerce.cart.presentation.dto.request.CartAddRequest;
 import com.groom.e_commerce.cart.presentation.dto.response.CartItemResponse;
-import com.groom.e_commerce.product.application.dto.StockManagement;
-import com.groom.e_commerce.product.application.service.ProductServiceV1;
-import com.groom.e_commerce.product.application.dto.ProductCartInfo;
-import com.groom.e_commerce.global.presentation.advice.CustomException;
-import com.groom.e_commerce.global.presentation.advice.ErrorCode;
+import com.groom.e_commerce.globalv2.presentation.advice.CustomException;
+import com.groom.e_commerce.globalv2.presentation.advice.ErrorCode;
 
-import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
+/**
+ * 장바구니 서비스
+ *
+ * 책임:
+ * - 상품 서비스 동기 검증
+ * - 재고 검증
+ * - 장바구니 유스케이스 오케스트레이션
+ *
+ * 책임 아님:
+ * - Redis Key/Hash 구조
+ * - 수량 증가 방식 (HINCRBY)
+ */
 @Service
 @RequiredArgsConstructor
-@Transactional
+@Slf4j
 public class CartService {
-	private final CartRepository cartRepository;
-	private final CartItemRepository cartItemRepository;
-	private final ProductServiceV1 productService;
 
+	private final CartRepository cartRepository;
+	private final ProductClient productClient;
+
+	/**
+	 * 장바구니 상품 추가
+	 *
+	 * 정책:
+	 * - 판매 가능 여부만 검증
+	 * - 재고 가점유 ❌
+	 * - 수량 증가는 Redis 원자 연산(HINCRBY)
+	 */
 	public void addItemToCart(UUID userId, CartAddRequest request) {
-		// 0. 상품 정보 조회 및 검증
-		StockManagement stockInfo = StockManagement.of(
+
+		log.info("장바구니 추가 요청 - userId={}, productId={}, variantId={}, quantity={}",
+			userId, request.getProductId(), request.getVariantId(), request.getQuantity());
+
+		// 1️⃣ 상품 정보 검증 (동기)
+		StockManagement stock = StockManagement.of(
 			request.getProductId(),
 			request.getVariantId(),
 			request.getQuantity()
 		);
 
-		List<ProductCartInfo> productInfos = productService.getProductCartInfos(List.of(stockInfo));
+		ProductCartInfo product = productClient
+			.getProductCartInfos(List.of(stock))
+			.stream()
+			.findFirst()
+			.orElseThrow(() -> new CustomException(ErrorCode.PRODUCT_NOT_FOUND));
 
-		if (productInfos.isEmpty()) {
-			throw new CustomException(ErrorCode.PRODUCT_NOT_FOUND);
-		}
-		ProductCartInfo productInfo = productInfos.get(0);
-
-		if (!productInfo.isAvailable()) {
+		if (!product.isAvailable()) {
 			throw new CustomException(ErrorCode.PRODUCT_NOT_ON_SALE);
 		}
 
-		if (productInfo.getStockQuantity() < request.getQuantity()) {
+		// 2️⃣ 현재 장바구니 수량 조회
+		int existingQty = cartRepository
+			.findItem(userId, request.getProductId(), request.getVariantId())
+			.map(CartItem::getQuantity)
+			.orElse(0);
+
+		int newTotalQty = existingQty + request.getQuantity();
+
+		// 3️⃣ 재고 검증
+		if (product.getStockQuantity() < newTotalQty) {
 			throw new CustomException(ErrorCode.STOCK_NOT_ENOUGH);
 		}
 
-		// 1. 장바구니 존재 확인 (없으면 생성)
-		Cart cart = cartRepository.findByUserId(userId)
-			.orElseGet(() -> cartRepository.save(new Cart(userId)));
+		// 4️⃣ Redis에 수량 증가 요청 (원자적)
+		cartRepository.addItem(
+			userId,
+			request.getProductId(),
+			request.getVariantId(),
+			request.getQuantity()
+		);
 
-		// 2. 중복 상품 확인 (하이브리드 체크)
-		CartItem existItem = findExistItem(cart, request);
-
-		if (existItem != null) {
-			// 3-1. 이미 있으면 수량만 추가 (Dirty Checking)
-			// 재고 체크 (기존 수량 + 추가 수량)
-			if (productInfo.getStockQuantity() < existItem.getQuantity() + request.getQuantity()) {
-				throw new CustomException(ErrorCode.STOCK_NOT_ENOUGH);
-			}
-			existItem.addQuantity(request.getQuantity());
-		} else {
-			// 3-2. 없으면 신규 생성
-			CartItem newItem = CartItem.builder()
-				.cart(cart)
-				.productId(request.getProductId())
-				.variantId(request.getVariantId())
-				.quantity(request.getQuantity())
-				.build();
-			cartItemRepository.save(newItem);
-		}
+		log.info("장바구니 추가 완료 - userId={}, productId={}",
+			userId, request.getProductId());
 	}
 
+	/**
+	 * 내 장바구니 조회
+	 *
+	 * 흐름:
+	 * 1. Redis에서 장바구니 아이템 조회
+	 * 2. Product Service Bulk 조회
+	 * 3. API Composition
+	 */
 	@Transactional(readOnly = true)
 	public List<CartItemResponse> getMyCart(UUID userId) {
-		Cart cart = cartRepository.findByUserId(userId).orElse(null);
-		if (cart == null) {
-			return List.of();
-		}
 
-		// 1. 내 장바구니의 모든 아이템 ID 리스트 가져오기
-		List<CartItem> cartItems = cartItemRepository.findAllByCart(cart);
+		log.info("장바구니 조회 - userId={}", userId);
 
+		// 1️⃣ Redis 조회
+		List<CartItem> cartItems = cartRepository.findAll(userId);
 		if (cartItems.isEmpty()) {
 			return List.of();
 		}
+
+		// 2️⃣ 상품 정보 Bulk 조회
 		List<StockManagement> stockInfos = cartItems.stream()
-			.map(CartItem::toStockManagement) // DTO로 변환!
+			.map(CartItem::toStockManagement)
 			.toList();
-		List<ProductCartInfo> productInfos = productService.getProductCartInfos(stockInfos);
 
-		// 3. 매핑을 위해 Map으로 변환 (Key: productId + variantId)
-		Map<String, ProductCartInfo> infoMap = productInfos.stream()
-			.collect(Collectors.toMap(
-				info -> generateLookupKey(info.getProductId(), info.getVariantId()),
-				Function.identity()
-			));
+		List<ProductCartInfo> productInfos =
+			productClient.getProductCartInfos(stockInfos);
 
-		// 4. CartItem과 실시간 Product 정보를 합쳐서 Response 생성
-		return cartItems.stream()
+		// 3️⃣ 빠른 조회를 위한 Map 구성
+		Map<CartItemKey, ProductCartInfo> productInfoMap =
+			productInfos.stream()
+				.collect(Collectors.toMap(
+					info -> new CartItemKey(info.getProductId(), info.getVariantId()),
+					Function.identity()
+				));
+
+		// 4️⃣ 응답 조합
+		List<CartItemResponse> responses = cartItems.stream()
 			.map(item -> {
-				String key = generateLookupKey(item.getProductId(), item.getVariantId());
-				ProductCartInfo info = infoMap.get(key);
+				CartItemKey key = new CartItemKey(
+					item.getProductId(),
+					item.getVariantId()
+				);
 
-				if (info == null) return null; // 상품이 삭제된 경우 등 예외처리
+				ProductCartInfo info = productInfoMap.get(key);
+				if (info == null) {
+					log.warn("삭제되었거나 조회 불가 상품 - productId={}, variantId={}",
+						item.getProductId(), item.getVariantId());
+					return null;
+				}
 
 				return CartItemResponse.builder()
-					.cartItemId(item.getId())
 					.productId(item.getProductId())
 					.variantId(item.getVariantId())
 					.productName(info.getProductName())
@@ -131,77 +163,102 @@ public class CartService {
 					.build();
 			})
 			.filter(Objects::nonNull)
-			.collect(Collectors.toList());
+			.toList();
+
+		log.info("장바구니 조회 완료 - userId={}, itemCount={}",
+			userId, responses.size());
+
+		return responses;
 	}
 
-	private String generateLookupKey(UUID productId, UUID variantId) {
-		return productId.toString() + (variantId != null ? variantId.toString() : "");
-	}
-	private CartItem findExistItem(Cart cart, CartAddRequest request) {
-		if (request.getVariantId() != null) {
-			return cartItemRepository.findByCartAndVariantId(cart, request.getVariantId())
-				.orElse(null);
-		} else {
-			return cartItemRepository.findByCartAndProductIdAndVariantIdIsNull(cart, request.getProductId())
-				.orElse(null);
-		}
-	}
+	/**
+	 * 장바구니 수량 변경 (덮어쓰기)
+	 */
+	public void updateItemQuantity(
+		UUID userId,
+		UUID productId,
+		UUID variantId,
+		int quantity
+	) {
 
-	public void updateItemQuantity(UUID userId, UUID itemId, int quantity) {
-		CartItem item = cartItemRepository.findById(itemId)
+		log.info("장바구니 수량 변경 - userId={}, productId={}, variantId={}, quantity={}",
+			userId, productId, variantId, quantity);
+
+		CartItem item = cartRepository
+			.findItem(userId, productId, variantId)
 			.orElseThrow(() -> new CustomException(ErrorCode.CART_ITEM_NOT_FOUND));
 
-		if (!item.getCart().getUserId().equals(userId)) {
-			throw new CustomException(ErrorCode.ACCESS_DENIED);
-		}
+		// productClient 사용 (Feign)
+		ProductCartInfo product = productClient
+			.getProductCartInfos(List.of(item.toStockManagement()))
+			.stream()
+			.findFirst()
+			.orElseThrow(() -> new CustomException(ErrorCode.PRODUCT_NOT_FOUND));
 
-		List<ProductCartInfo> productInfos = productService.getProductCartInfos(
-			List.of(item.toStockManagement())
-		);
-
-		if (productInfos.isEmpty()) {
-			throw new CustomException(ErrorCode.PRODUCT_NOT_FOUND);
-		}
-		ProductCartInfo info = productInfos.get(0);
-		if (!info.isAvailable()) {
+		if (!product.isAvailable()) {
 			throw new CustomException(ErrorCode.PRODUCT_NOT_ON_SALE);
 		}
-		if (info.getStockQuantity() < quantity) {
+
+		if (product.getStockQuantity() < quantity) {
 			throw new CustomException(ErrorCode.STOCK_NOT_ENOUGH);
 		}
-		item.updateQuantity(quantity);
+
+		cartRepository.updateQuantity(userId, productId, variantId, quantity);
+
+		log.info("장바구니 수량 변경 완료 - userId={}, productId={}",
+			userId, productId);
 	}
 
-	public void deleteCartItem(UUID userId, UUID itemId) {
-		// 1. 삭제할 아이템 조회
-		CartItem item = cartItemRepository.findById(itemId)
+
+	/**
+	 * 장바구니 아이템 단일 삭제
+	 */
+	public void deleteCartItem(UUID userId, UUID productId, UUID variantId) {
+
+		cartRepository.findItem(userId, productId, variantId)
 			.orElseThrow(() -> new CustomException(ErrorCode.CART_ITEM_NOT_FOUND));
 
-		// 2. 권한 체크 (남의 장바구니 아이템을 지우면 안 됨)
-		if (!item.getCart().getUserId().equals(userId)) {
-			throw new CustomException(ErrorCode.ACCESS_DENIED);
-		}
+		cartRepository.removeItem(userId, productId, variantId);
 
-		// 3. 삭제
-		cartItemRepository.delete(item);
+		log.info("장바구니 아이템 삭제 - userId={}, productId={}",
+			userId, productId);
 	}
 
-	public void removeCartItems(UUID userId, List<UUID> itemIds) {
-		if (itemIds == null || itemIds.isEmpty()) {
+	/**
+	 * 장바구니 아이템 일괄 삭제
+	 */
+	public void removeCartItems(UUID userId, List<CartItemDeleteRequest> items) {
+
+		if (items == null || items.isEmpty()) {
 			return;
 		}
 
-		// 1. 삭제할 아이템들을 한 번에 조회
-		List<CartItem> items = cartItemRepository.findAllById(itemIds);
+		List<CartItemKey> keys = items.stream()
+			.map(i -> new CartItemKey(i.getProductId(), i.getVariantId()))
+			.toList();
 
-		// 2. 본인의 장바구니 아이템인지 검증 (보안)
-		items.forEach(item -> {
-			if (!item.getCart().getUserId().equals(userId)) {
-				throw new CustomException(ErrorCode.ACCESS_DENIED);
-			}
-		});
+		cartRepository.removeItems(userId, keys);
 
-		// 3. 일괄 삭제 (쿼리 최적화)
-		cartItemRepository.deleteAll(items);
+		log.info("장바구니 아이템 일괄 삭제 - userId={}, count={}",
+			userId, items.size());
+	}
+
+	/**
+	 * 장바구니 전체 비우기
+	 * (주문 확정 이벤트 등에서 사용)
+	 */
+	public void clearCart(UUID userId) {
+		cartRepository.clear(userId);
+		log.info("장바구니 전체 삭제 - userId={}", userId);
+	}
+
+	/**
+	 * 일괄 삭제 요청 DTO
+	 */
+	@lombok.Getter
+	@lombok.AllArgsConstructor
+	public static class CartItemDeleteRequest {
+		private UUID productId;
+		private UUID variantId;
 	}
 }
